force-app/main/default/objects/Calendar_Auto_Dispatch_Rule__mdt/Calendar_Auto_Dispatch_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Calendar Auto Dispatch Rule</label>
    <pluralLabel>Calendar Auto Dispatch Rules</pluralLabel>
</CustomObject>