force-app/main/default/objects/Calendar_Auto_Dispatch_Rule__mdt/fields/Calendar_Source__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Source__c</fullName>
    <label>Calendar Source</label>
    <type>Text</type>
    <length>80</length>
</CustomField>