force-app/main/default/objects/Calendar_Auto_Dispatch_Rule__mdt/fields/Consent_Required__c.field-meta.xml
<CustomField>
    <fullName>Consent_Required__c</fullName>
    <label>Consent Required</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
</CustomField>