force-app/main/default/objects/Calendar_Auto_Dispatch_Rule__mdt/fields/Rule_Name__c.field-meta.xml
<CustomField>
    <fullName>Rule_Name__c</fullName>
    <label>Rule Name</label>
    <type>Text</type>
    <length>80</length>
</CustomField>